Issue sur le front (#409)
* fix: a lot of fix on the UI

* fix: connection button accessible only if you're not sign in

* fix: connection error

* fix: traduction & changing wording

* fix: fixing some issues on the front in shopping list

* fix: preventing ingredients nil when updating the shopping list

* fix: useful comment added

* fix: wording in traduction

* fix: front & reloading new recipe

* fix: wording in the variable

* fix: duplication of a div

* fix: translation in recipe

* fix: slimselect fonctionnal

* fix: routing when deleting a recipe

* fix: deleting my account

* fix: traduction adding ingredient

* fix: traduction adding ingredient

* fix: translation in producer text & routing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -290,7 +290,7 @@ en:
     not_created: "The ingredient did not be created"
     no_null: "The ingredient cannot be empty"
     creation:
-      valid: "Your request has been taken into account and will be processed within 48 hours."
+      valid: "The ingredient has been added, thank you ."
       invalid: "Your request is not valid. This ingredient must already be in the database."
     label: "Ingredient"
     create:
@@ -412,6 +412,7 @@ en:
     no_bio: "No provided description"
     new:
       welcome: "You are now a producer ! Congra tulation !"
+      welcome_create: "Welcome to the Recipy producer family !"
     back_to_profile: "Return to my producer profile"
     no_list: "No producer on the plateform"
   user:
