--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -238,6 +238,7 @@ en:
       new_ingredient_elem: "New Ingredient"
       number_views: "Number of views:"
       number_feedbacks: "Number of feedbacks:"
+      no_quantity_type: "Undefined"
     action:
       edit: "Edit"
       show: "Show"
